加入豆瓣，处理H5外链跳转

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -74,10 +74,10 @@
 	},
 	"h5" : {
 		"router" : {
-			"base" : "./hs/"
+			"base" : "./"
 		},
 		"devServer" : {
-			"https" : true
+			"https" : false
 		}
 	}
 }
